Update modern platform to 1.21.11 (#1577)
Signed-off-by: BT (calcastor/mame) <43831917+calcastor@users.noreply.github.com>
Signed-off-by: TTtie <me@tttie.cz>
Co-authored-by: TTtie <me@tttie.cz>